--- a/WebApplication1/Areas/webmaster/Views/paquetes/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/paquetes/listado.cshtml
@@ -69,7 +69,7 @@
                                         <th class="f-b">Nombre del Paquete</th>
                                         <th class="f-b">Tarifa</th>
                                         <th class="f-b">Descripción del Paquete</th>
-                                        <th class="f-b">Suscribe link</th>
+                                        <th class="f-b">Enlace</th>
                                         <th class="text-center f-b">Opciones</th>
                                     </tr>
                                 </thead>
