--- a/WebApplication1/Views/Shared/_Layout_Suscribe.cshtml
+++ b/WebApplication1/Views/Shared/_Layout_Suscribe.cshtml
@@ -1,45 +1,25 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <meta content="Software para administrar comunidades" name="description" />
-    <meta content="zerosystempr" name="author" />
     <title>@Page.Title</title>
-    <link rel="shortcut icon" type="image/x-icon" href="~/assets/images/favicon.ico" />
+    <meta content="Admin Dashboard" name="description" />
+    <meta content="themesdesign" name="author" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <link rel="shortcut icon" href="~/assets/images/favicon.ico">
+
     <link href="~/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="~/assets/plugins/animate/animate.css" rel="stylesheet" type="text/css">
     <link href="~/assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="~/assets/css/style.css" rel="stylesheet" type="text/css">
     <link href="~/assets/css/custom.css" rel="stylesheet" type="text/css">
-    <style>
-        .form-signin {
-            width: 100%;
-        }
-
-        .form-signin .btn {
-            font-size: 80%;
-            border-radius: 5rem;
-            letter-spacing: .1rem;
-            font-weight: bold;
-            padding: 1rem;
-            transition: all 0.2s;
-        }
-
-        .form-label-group {
-            position: relative;
-            margin-bottom: 1rem;
-        }
-
-        .form-label-group input {
-            height: auto;
-            border-radius: 2rem;
-        }
-    </style>
+   
 </head>
 
-<body>
+<body class="bg-full-screen-image">
     <!-- Begin page -->
     <script type="text/javascript" src="~/assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="~/assets/js/popper.min.js"></script>
