--- a/WebApplication1/Areas/webmaster/Views/administradores/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/administradores/listado.cshtml
@@ -67,6 +67,8 @@
                                 <thead>
                                     <tr>
                                         <th class="f-b status">Nombre</th>
+                                        <th class="f-b status">Apellido Paterno</th>
+                                        <th class="f-b status">Apellido Materno</th>
                                         <th class="f-b status">Email</th>
                                         <th class="f-b">Estado</th>
                                         <th class="f-b">Comunidad(es)</th>
@@ -76,43 +78,48 @@
                                 <tbody>
                                     @foreach (var item in Model.coadminList)
                                     {
-                                        <tr>
-                                            <td>@item.first_name1</td>
-                                            <td class="text-center">@item.email</td>
-                                            <td class="text-center">
-                                                @if (item.is_active == true)
-                                                {
-                                                    <button type="button" class="btn btn-primary waves-effect waves-light btn-sm" onclick="onAdminInactive(this)" data-id="@item.id">Activo</button>
-                                                }
-                                                else
-                                                {
-                                                    <button type="button" class="btn btn-danger waves-effect waves-light btn-sm" onclick="onAdminActive(this)" data-id="@item.id">Inactivo</button>
-                                                }
+                                    <tr>
+                                        <td>@item.first_name1</td>
+                                        <td>@item.last_name1</td>
+                                        <td>@item.mother_last_name1</td>
+                                        <td class="text-center">@item.email</td>
+                                        <td class="text-center">
+                                            @if (item.is_active == true)
+                                            {
+                                                <button type="button" class="btn btn-primary waves-effect waves-light btn-sm" onclick="onAdminInactive(this)" data-id="@item.id">Activo</button>
+                                            }
+                                            else
+                                            {
+                                                <button type="button" class="btn btn-danger waves-effect waves-light btn-sm" onclick="onAdminActive(this)" data-id="@item.id">Inactivo</button>
+                                            }
 
-                                            </td>
-                                            <td class="text-center">@Model.communityDict[item.id]</td>
-                                            <td class="text-center">
+                                        </td>
+                                        <td class="text-center">@Model.communityDict[item.id]</td>
+                                        <td class="text-center">
                                             <a href="@Url.Action("ver", "administradores", new { area = "webmaster", id = item.id  })">
-                                                <button type="button" 
-                                                        class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1" 
+                                                <button type="button"
+                                                        class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
                                                         data-toggle="tooltip" data-placement="top" title="Ver">
-                                                <i class="mdi mdi-eye"></i></button>
+                                                    <i class="mdi mdi-eye"></i>
+                                                </button>
                                             </a>
                                             <a href="@Url.Action("editar", "administradores", new { area = "webmaster",  id = item.id })">
-                                                <button type="button" 
-                                                        class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1" 
+                                                <button type="button"
+                                                        class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
                                                         data-toggle="tooltip" data-placement="top" title="Editar">
-                                                <i class="mdi mdi-lead-pencil"></i></button>
+                                                    <i class="mdi mdi-lead-pencil"></i>
+                                                </button>
                                             </a>
                                             <a href="#">
                                                 <button type="button" onclick="onDeleteCoadmin(this)" data-id="@item.id"
-                                                        class="btn btn-danger waves-effect waves-light btn-sm mb-1" 
-                                                        data-toggle="tooltip" 
+                                                        class="btn btn-danger waves-effect waves-light btn-sm mb-1"
+                                                        data-toggle="tooltip"
                                                         data-placement="top" title="Eliminar">
-                                                <i class="mdi mdi-delete"></i></button>
+                                                    <i class="mdi mdi-delete"></i>
+                                                </button>
                                             </a>
-                                            </td>
-                                        </tr>
+                                        </td>
+                                    </tr>
                                     }
                                 </tbody>
                             </table>
