--- a/WebApplication1/Areas/webmaster/Views/administradores/ver.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/administradores/ver.cshtml
@@ -36,7 +36,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Editar Administrador</li>
+                            <li class="breadcrumb-item active">Ver Administrador</li>
                         </ul>
                     </div>
                 </div>
