--- a/WebApplication1/Areas/webmaster/Views/comunidades/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/agregar.cshtml
@@ -3,7 +3,9 @@
     ViewBag.Title = "agregar";
     Page.Title = "Agregar Comunidad - Brokolee Software";
 }
-
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<link href="~/Content/Select-Multiple.css" rel="stylesheet" />
 <div class="page-content-wrapper">
 
     <div class="container-fluid">
@@ -48,70 +50,70 @@
                     }))
                     {
                         @Html.AntiForgeryToken()
-                    <div class="card-body">
-                        <h5 class="d-inline-block">Nueva Comunidad</h5>
-                        <div class="form-divider"></div>
-                        <div class="form-group row">
-                            <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
-                            <div class="col-sm-9">
-                                <input class="form-control" type="text" value="" name="first_name"
-                                       data-toggle="tooltip" title="Nombre de la Comunidad"
-                                       placeholder="Nombre" id="example-email-input" />
-                                <small class="form-text text-muted">Nombre de la Comunidad</small>
+                        <div class="card-body">
+                            <h5 class="d-inline-block">Nueva Comunidad</h5>
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
+                                <div class="col-sm-9">
+                                    <input class="form-control" type="text" value="" name="first_name"
+                                           data-toggle="tooltip" title="Nombre de la Comunidad"
+                                           placeholder="Nombre" id="example-email-input" />
+                                    <small class="form-text text-muted">Nombre de la Comunidad</small>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-divider"></div>
-                        <div class="form-group row">
-                            <label  class="col-sm-3 col-form-label">Administrador</label>
-                            <div class="col-sm-9">
-                                <select class="form-control"   name="admin_email"
-                                       data-toggle="tooltip" title="Email del Administrador">
-                                      
-                                @foreach (var item in Model.coadminList)
-                                {
-                                      <option value="@item.id">@item.first_name1</option>
-                                }
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">Administrador</label>
+                                <div class="col-sm-9">
+                                    <select class="form-control" id="AdminSelect" multiple="multiple" name="adminlist"
+                                            data-toggle="tooltip" title="Email del Administrador">
+
+                                        @foreach (var item in Model.coadminList)
+                                        {
+                                            <option value="@item.id">@item.email</option>
+                                        }
                                     </select>
-                                <small class="form-text text-muted">Listado de Administradores</small>
+                                    <small class="form-text text-muted">Listado de Administradores</small>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-divider"></div>
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Paquete</label>
-                            <div class="col-sm-9">
-                                <select class="form-control" name="packageId"
-                                        data-toggle="tooltip" title="Paquete adquirido">
-                                    @foreach (var item in Model.packageList)
-                                    {
-                                      <option value="@item.id">@item.first_name</option>
-                                    }
-                                </select>
-                                <small class="form-text text-muted">Paquete adquirido</small>
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">Paquete</label>
+                                <div class="col-sm-9">
+                                    <select class="form-control" name="packageId"
+                                            data-toggle="tooltip" title="Paquete adquirido">
+                                        @foreach (var item in Model.packageList)
+                                        {
+                                            <option value="@item.id">@item.first_name</option>
+                                        }
+                                    </select>
+                                    <small class="form-text text-muted">Paquete adquirido</small>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-divider"></div>
-                        <div class="form-group row">
-                            <label for="example-lastname1-input" class="col-sm-3 col-form-label">Apartamento </label>
-                            <div class="col-sm-9">
-                                <input class="form-control" name="apartment" placeholder="Apartamento  1"
-                                       data-toggle="tooltip" title="Apartamento"
-                                       required/>
-                                <small class="form-text text-muted">Apartamento</small>
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
+                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección</label>
+                                <div class="col-sm-9">
+                                    <input class="form-control" name="apartment" placeholder="Dirección"
+                                           data-toggle="tooltip" title="Dirección"
+                                           required />
+                                    <small class="form-text text-muted">Dirección</small>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-divider"></div>
-                        <div class="form-group row">
-                            <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
-                            <div class="col-sm-9">
-                                <textarea class="form-control" rows="3" name="description"
-                                          data-toggle="tooltip" title="Descripción de la comunidad"
-                                          placeholder="Descripción"></textarea>
-                                <small class="form-text text-muted">Descripción de la comunidad</small>
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
+                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
+                                <div class="col-sm-9">
+                                    <textarea class="form-control" rows="3" name="description"
+                                              data-toggle="tooltip" title="Descripción de la comunidad"
+                                              placeholder="Descripción"></textarea>
+                                    <small class="form-text text-muted">Descripción de la comunidad</small>
+                                </div>
                             </div>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
+                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
-                        <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar Comunidad</button></a>
-                        <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
-</div>
                     }
                 </div>
             </div>
@@ -127,3 +129,4 @@
     </div><!-- container -->
 
 </div> <!-- Page content Wrapper -->
+<script src="~/Scripts/Select-Multiple.js"></script>
