--- a/WebApplication1/Areas/webmaster/Views/titulares/listadoTitulos.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/listadoTitulos.cshtml
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Listado de Títulos de Propiedad</h4>
+                            <h4 class="page-title">Comunidades</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Listado de Títulos de Propiedad</li>
+                            <li class="breadcrumb-item active">Comunidades</li>
                         </ul>
                     </div>
                 </div>
