--- a/WebApplication1/Areas/webmaster/Views/webmaster/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/webmaster/editar.cshtml
@@ -30,13 +30,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Editar Webmaster</h4>
+                            <h4 class="page-title">@ViewBag.TituloPagina</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Editar Webmaster</li>
+                            <li class="breadcrumb-item active">@ViewBag.TituloPagina</li>
                         </ul>
                     </div>
                 </div>
