--- a/WebApplication1/Areas/webmaster/Views/webmaster/editar_perfil.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/webmaster/editar_perfil.cshtml
@@ -141,7 +141,7 @@
                                 </div>
                             </div>
 
-                            <a href="#"><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar Perfil</button></a>
+                            <a href="#"><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                         </div>
                     }
                 </div>
