--- a/WebApplication1/Views/suscribe/Index.cshtml
+++ b/WebApplication1/Views/suscribe/Index.cshtml
@@ -12,7 +12,7 @@
                 Iniciar
             </h3>
 
-            <form  method="post" action="@Url.Action("SubmitLogin", "suscribe")">
+            <form method="post" action="@Url.Action("SubmitLogin", "suscribe")">
                 @if (Model.WarningMsg != "")
                 {
                     <div class="alert alert-danger">
@@ -21,23 +21,29 @@
                 }
 
 
-                <div class="form-label-group">
-                    <input type="email" id="inputEmail" class="form-control" name="Email" value="@Model.Email" placeholder="Email address" required autofocus />
-                    @*<label for="inputEmail">Email address</label>*@
+
+                <div class="form-group row">
+                    <div class="col-12">
+                        <input type="email" id="inputEmail" class="form-control" name="Email" value="@Model.Email" placeholder="Email" required autofocus />
+                        @*<label for="inputEmail">Email address</label>*@
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-12">
+                        <input type="password" id="inputPassword" class="form-control" name="Password" value="@Model.Password" placeholder="Contraseña" required />
+                        @*<label for="inputPassword">Password</label>*@
+                    </div>
                 </div>
 
-                <div class="form-label-group">
-                    <input type="password" id="inputPassword" class="form-control" name="Password" value="@Model.Password" placeholder="Password" required />
-                    @*<label for="inputPassword">Password</label>*@
-                </div>
-
-                <input type="hidden" name="PackageId" value="@Model.PackageId"/>
-
-                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Iniciar</button>
-                <hr class="my-4">
-                <div class="text-center">
-                    <a href="@Url.Action("Register", "suscribe", new { packageId = Model.PackageId })">Register suscribe</a>
-                </div>
+                <input type="hidden" name="PackageId" value="@Model.PackageId" />
+                <div class="form-group text-center row m-t-20">
+                    <div class="col-12">
+                        <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Ingresar</button>
+                       </div>
+                    </div>
+                        <div class="text-center">
+                            <a href="@Url.Action("Register", "suscribe", new { packageId = Model.PackageId })">Registrarse</a>
+                        </div>
             </form>
         </div>
     </div>
