--- a/WebApplication1/Views/suscribe/Register.cshtml
+++ b/WebApplication1/Views/suscribe/Register.cshtml
@@ -20,52 +20,68 @@
                     </div>
                 }
 
-                <div class="form-label-group">
-                    <input type="text" id="inputName" class="form-control" name="Name" placeholder="Name" value="@Model.Name" required autofocus />
+            <div class="form-group row">
+                <div class="col-12">
+                    <input type="text" id="inputName" class="form-control" name="Name" placeholder="Nombre" value="@Model.Name" required autofocus />
                     @*<label for="inputName">Name</label>*@
                 </div>
+            </div>
 
-                <div class="form-label-group">
-                    <input type="text" id="inputLastName" class="form-control" name="LastName" value="@Model.LastName" placeholder="Last Name" required />
+            <div class="form-group row">
+                <div class="col-12">
+                    <input type="text" id="inputLastName" class="form-control" name="LastName" value="@Model.LastName" placeholder="Apellido" required />
                     @*<label for="inputLastName">Last Name</label>*@
                 </div>
+            </div>
 
-                <div class="form-label-group">
-                    <input type="text" id="inputCommunityName" class="form-control" name="CommunityName" value="@Model.CommunityName" placeholder="Community Name" required />
+            <div class="form-group row">
+                <div class="col-12">
+                    <input type="text" id="inputCommunityName" class="form-control" name="CommunityName" value="@Model.CommunityName" placeholder="Nombre de la Comunidad" required />
                     @*<label for="inputCommunityName">Community Name</label>*@
                 </div>
+            </div>
 
-                <div class="form-label-group">
-                    <input type="text" id="inputAddress" class="form-control" name="Address" value="@Model.Address" placeholder="Address" required />
+            <div class="form-group row">
+                <div class="col-12">
+                    <input type="text" id="inputAddress" class="form-control" name="Address" value="@Model.Address" placeholder="Dirección" required />
                     @*<label for="inputAddress">Address</label>*@
                 </div>
+            </div>
 
-                <div class="form-label-group">
-                    <input type="tel" id="inputPhone" class="form-control" name="PhoneNumber" value="@Model.PhoneNumber" placeholder="Phonbe Number" required />
+            <div class="form-group row">
+                <div class="col-12">
+                    <input type="tel" id="inputPhone" class="form-control" name="PhoneNumber" value="@Model.PhoneNumber" placeholder="Numero de telefono" required />
                     @*<label for="inputPhone">Phone Number</label>*@
                 </div>
+            </div>
 
-                <div class="form-label-group">
-                    <input type="email" id="inputEmail" class="form-control" name="Email" value="@Model.Email" placeholder="Email address" required />
+            <div class="form-group row">
+                <div class="col-12">
+                    <input type="email" id="inputEmail" class="form-control" name="Email" value="@Model.Email" placeholder="Correo Electronio" required />
                     @*<label for="inputEmail">Email address</label>*@
                 </div>
+            </div>
 
-                <div class="form-label-group">
-                    <input type="password" id="inputPassword" class="form-control" name="Password" value="@Model.Password" placeholder="Password" required />
+            <div class="form-group row">
+                <div class="col-12">
+                    <input type="password" id="inputPassword" class="form-control" name="Password" value="@Model.Password" placeholder="Contraseña" required />
                     @*<label for="inputPassword">Password</label>*@
                 </div>
+            </div>
 
-                <div class="form-label-group">
-                    <input type="password" id="inputConfirmPassword" class="form-control" name="ConfirmPassword" value="@Model.ConfirmPassword" placeholder="Confirm password" required />
+            <div class="form-group row">
+                <div class="col-12">
+                    <input type="password" id="inputConfirmPassword" class="form-control" name="ConfirmPassword" value="@Model.ConfirmPassword" placeholder="Confirmar contraseña" required />
                     @*<label for="inputConfirmPassword">Confirm password</label>*@
                 </div>
-                <input type="hidden" name="PackageId" value="@Model.PackageId" />
+            </div>
+                                        <input type="hidden" name="PackageId" value="@Model.PackageId" />
 
-                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Registrarse</button>
-            </form>
+                                        <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Registrarse</button>
+</form>
             <hr class="my-4">
             <div class="text-center">
-                <a href="@Url.Action("Index", "suscribe", new { packageId = Model.PackageId })">Iniciar suscribe</a>
+                <a href="@Url.Action("Index", "suscribe", new { packageId = Model.PackageId })">Ingresar</a>
             </div>
         </div>
     </div>
