--- a/WebApplication1/Areas/webmaster/Views/titulares/agregarTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/agregarTitulo.cshtml
@@ -204,8 +204,7 @@
                                 <div class="form-divider"></div>
                                 <h5 class="d-inline-block">Información del Arrendatario</h5>
                                 <div class="form-divider"></div>
-                                <h6 class="mt-0 header-title">Nombre completo del Arrendatario</h6>
-                                <p>Nombre del segundo arrendatario según aparece en contrato de arrendamiento.</p>
+                                <h6 class="mt-0 header-title">Nombre completo del arrendatario</h6>
                                 <div class="form-group row">
                                     <label for="example-name2-input" class="col-sm-3 col-form-label">Nombre</label>
                                     <div class="col-sm-9">
@@ -235,7 +234,7 @@
                                 </div>
                                 <div class="form-divider"></div>
                                 <div class="form-group row">
-                                    <label for="example-address1-input" class="col-sm-3 col-form-label">Dirección Postal</label>
+                                    <label for="example-address1-input" class="col-sm-3 col-form-label">Dirección postal</label>
                                     <div class="col-sm-9">
                                         <input class="form-control" type="text" value="" name="leased_postal_address"
                                                data-toggle="tooltip" title="Dirección postal del Arrendatario"
@@ -248,19 +247,18 @@
 
                                 <div class="form-divider"></div>
                                 <div class="form-group row">
-                                    <label for="example-address2-input" class="col-sm-3 col-form-label">Dirección Residencial</label>
+                                    <label for="example-address2-input" class="col-sm-3 col-form-label">Dirección residencial</label>
                                     <div class="col-sm-9">
-                                        <input class="form-control" type="text" value="" placeholder="Dirección Residencial"
+                                        <input class="form-control" type="text" value="" placeholder="Dirección residencial"
                                                data-toggle="tooltip" title="Dirección residencial del Arrendatario" name="leased_residential_address"
                                                id="example-address2-input">
                                         <small class="form-text text-muted">Dirección residencial del Arrendatario-G2</small>
                                     </div>
                                 </div>
                                 <div class="form-divider"></div>
-                                <h6 class="mt-0 header-title">Contrato</h6>
-                                <p>Contrato de arrendamiento.</p>
+                                <h6 class="mt-0 header-title">Contrato de arrendamiento</h6>
                                 <div class="form-group row">
-                                    <label for="example-name2-input" class="col-sm-3 col-form-label">Subir archivo</label>
+                                    <label for="example-name2-input" class="col-sm-3 col-form-label">Subir contrato de arrendamiento</label>
                                     <div class="col-sm-9">
                                         <div class="input-group mt-2">
                                             <div class="custom-file">
