--- a/WebApplication1/Areas/webmaster/Views/titulares/verTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/verTitulo.cshtml
@@ -239,7 +239,7 @@
                                 <div class="form-divider"></div>
                                 <h5 class="d-inline-block">Información del Arrendatario</h5>
                                 <div class="form-divider"></div>
-                                <h6 class="mt-0 header-title">Nombre completo del Arrendatario</h6>
+                                <h6 class="mt-0 header-title">Nombre completo del arrendatario</h6>
                                 <div class="form-group row">
                                     <label for="example-name2-input" class="col-sm-3 col-form-label">Nombre</label>
                                     <div class="col-sm-9">
@@ -278,7 +278,7 @@
                                 </div>
                                 <div class="form-divider"></div>
                                 <div class="form-group row">
-                                    <label for="example-address1-input-leased-postal-address" class="col-sm-3 col-form-label">Dirección Postal</label>
+                                    <label for="example-address1-input-leased-postal-address" class="col-sm-3 col-form-label">Dirección postal</label>
                                     <div class="col-sm-9">
                                         <input class="form-control" readonly
                                                type="text" data-toggle="tooltip"
@@ -291,27 +291,26 @@
                                 </div>
                                 <div class="form-divider"></div>
                                 <div class="form-group row">
-                                    <label for="example-address2-input-leased-residential-address" class="col-sm-3 col-form-label">Dirección Residencial</label>
+                                    <label for="example-address2-input-leased-residential-address" class="col-sm-3 col-form-label">Dirección residencial</label>
                                     <div class="col-sm-9">
                                         <input class="form-control" readonly
                                                type="text"
                                                value="@Model.titulo.leased_residential_address"
                                                data-toggle="tooltip"
                                                name="leased_residential_address"
-                                               placeholder="Dirección Residencial"
+                                               placeholder="Dirección residencial"
                                                id="example-address2-input-leased-residential-address">
                                         @*   <small class="form-text text-muted">Dirección residencial del Arrendatario</small>*@
                                     </div>
                                 </div>
                                 <div class="form-divider"></div>
 
-                                <h6 class="mt-0 header-title">Contrato</h6>
-                                <p>Contrato de arrendamiento.</p>
+                                <h6 class="mt-0 header-title">Contrato de arrendamiento</h6>
                                 
                                 @if (Model.titulo.leased_upload_file != null)
                                 {
                                     <div class="form-group row">
-                                        <label for="example-name2-input" class="col-sm-3 col-form-label">Descargar archivo</label>
+                                        <label for="example-name2-input" class="col-sm-3 col-form-label">Descargar contrato de arrendamiento</label>
                                         <div class="col-sm-9">
                                             <div class="input-group mt-2">
                                                 <div class="custom-file">
