--- a/WebApplication1/Areas/webmaster/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/Shared/_Layout.cshtml
@@ -1274,6 +1274,7 @@
                 type: "post",
                 data: formData,
                 success: function (result) {
+                    console.log(result);
                     $("#ck-body-loading-overlay").hide();
                     if (result.result === "error") {
                         console.log('couln\'t get roles');
